--- a/wine_report.html
+++ b/wine_report.html
@@ -3051,12 +3051,12 @@ dlookr::describe(wine) %&gt;%
     select(described_variables, mean, sd, se_mean, skewness, kurtosis, IQR ,p00, p50, p100) %&gt;% 
   mutate_if(is.numeric, ~round(.,2)) %&gt;%
   gt::gt()</code></pre>
-<div id="kiibliocot" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="xmgafkcemi" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#kiibliocot .gt_table {
+#xmgafkcemi .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -3081,7 +3081,7 @@ dlookr::describe(wine) %&gt;%
   border-left-color: #D3D3D3;
 }
 
-#kiibliocot .gt_heading {
+#xmgafkcemi .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -3093,7 +3093,7 @@ dlookr::describe(wine) %&gt;%
   border-right-color: #D3D3D3;
 }
 
-#kiibliocot .gt_title {
+#xmgafkcemi .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -3105,7 +3105,7 @@ dlookr::describe(wine) %&gt;%
   border-bottom-width: 0;
 }
 
-#kiibliocot .gt_subtitle {
+#xmgafkcemi .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -3117,13 +3117,13 @@ dlookr::describe(wine) %&gt;%
   border-top-width: 0;
 }
 
-#kiibliocot .gt_bottom_border {
+#xmgafkcemi .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#kiibliocot .gt_col_headings {
+#xmgafkcemi .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -3138,7 +3138,7 @@ dlookr::describe(wine) %&gt;%
   border-right-color: #D3D3D3;
 }
 
-#kiibliocot .gt_col_heading {
+#xmgafkcemi .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -3158,7 +3158,7 @@ dlookr::describe(wine) %&gt;%
   overflow-x: hidden;
 }
 
-#kiibliocot .gt_column_spanner_outer {
+#xmgafkcemi .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -3170,15 +3170,15 @@ dlookr::describe(wine) %&gt;%
   padding-right: 4px;
 }
 
-#kiibliocot .gt_column_spanner_outer:first-child {
+#xmgafkcemi .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#kiibliocot .gt_column_spanner_outer:last-child {
+#xmgafkcemi .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#kiibliocot .gt_column_spanner {
+#xmgafkcemi .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -3190,7 +3190,7 @@ dlookr::describe(wine) %&gt;%
   width: 100%;
 }
 
-#kiibliocot .gt_group_heading {
+#xmgafkcemi .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -3215,7 +3215,7 @@ dlookr::describe(wine) %&gt;%
   vertical-align: middle;
 }
 
-#kiibliocot .gt_empty_group_heading {
+#xmgafkcemi .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -3230,15 +3230,15 @@ dlookr::describe(wine) %&gt;%
   vertical-align: middle;
 }
 
-#kiibliocot .gt_from_md > :first-child {
+#xmgafkcemi .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#kiibliocot .gt_from_md > :last-child {
+#xmgafkcemi .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#kiibliocot .gt_row {
+#xmgafkcemi .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -3257,7 +3257,7 @@ dlookr::describe(wine) %&gt;%
   overflow-x: hidden;
 }
 
-#kiibliocot .gt_stub {
+#xmgafkcemi .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -3270,7 +3270,7 @@ dlookr::describe(wine) %&gt;%
   padding-right: 5px;
 }
 
-#kiibliocot .gt_stub_row_group {
+#xmgafkcemi .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -3284,11 +3284,11 @@ dlookr::describe(wine) %&gt;%
   vertical-align: top;
 }
 
-#kiibliocot .gt_row_group_first td {
+#xmgafkcemi .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#kiibliocot .gt_summary_row {
+#xmgafkcemi .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -3298,16 +3298,16 @@ dlookr::describe(wine) %&gt;%
   padding-right: 5px;
 }
 
-#kiibliocot .gt_first_summary_row {
+#xmgafkcemi .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#kiibliocot .gt_first_summary_row.thick {
+#xmgafkcemi .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#kiibliocot .gt_last_summary_row {
+#xmgafkcemi .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -3317,7 +3317,7 @@ dlookr::describe(wine) %&gt;%
   border-bottom-color: #D3D3D3;
 }
 
-#kiibliocot .gt_grand_summary_row {
+#xmgafkcemi .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -3327,7 +3327,7 @@ dlookr::describe(wine) %&gt;%
   padding-right: 5px;
 }
 
-#kiibliocot .gt_first_grand_summary_row {
+#xmgafkcemi .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -3337,11 +3337,11 @@ dlookr::describe(wine) %&gt;%
   border-top-color: #D3D3D3;
 }
 
-#kiibliocot .gt_striped {
+#xmgafkcemi .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#kiibliocot .gt_table_body {
+#xmgafkcemi .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -3350,7 +3350,7 @@ dlookr::describe(wine) %&gt;%
   border-bottom-color: #D3D3D3;
 }
 
-#kiibliocot .gt_footnotes {
+#xmgafkcemi .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -3364,7 +3364,7 @@ dlookr::describe(wine) %&gt;%
   border-right-color: #D3D3D3;
 }
 
-#kiibliocot .gt_footnote {
+#xmgafkcemi .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-left: 4px;
@@ -3373,7 +3373,7 @@ dlookr::describe(wine) %&gt;%
   padding-right: 5px;
 }
 
-#kiibliocot .gt_sourcenotes {
+#xmgafkcemi .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -3387,7 +3387,7 @@ dlookr::describe(wine) %&gt;%
   border-right-color: #D3D3D3;
 }
 
-#kiibliocot .gt_sourcenote {
+#xmgafkcemi .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -3395,36 +3395,36 @@ dlookr::describe(wine) %&gt;%
   padding-right: 5px;
 }
 
-#kiibliocot .gt_left {
+#xmgafkcemi .gt_left {
   text-align: left;
 }
 
-#kiibliocot .gt_center {
+#xmgafkcemi .gt_center {
   text-align: center;
 }
 
-#kiibliocot .gt_right {
+#xmgafkcemi .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#kiibliocot .gt_font_normal {
+#xmgafkcemi .gt_font_normal {
   font-weight: normal;
 }
 
-#kiibliocot .gt_font_bold {
+#xmgafkcemi .gt_font_bold {
   font-weight: bold;
 }
 
-#kiibliocot .gt_font_italic {
+#xmgafkcemi .gt_font_italic {
   font-style: italic;
 }
 
-#kiibliocot .gt_super {
+#xmgafkcemi .gt_super {
   font-size: 65%;
 }
 
-#kiibliocot .gt_two_val_uncert {
+#xmgafkcemi .gt_two_val_uncert {
   display: inline-block;
   line-height: 1em;
   text-align: right;
@@ -3433,31 +3433,31 @@ dlookr::describe(wine) %&gt;%
   margin-left: 0.1em;
 }
 
-#kiibliocot .gt_footnote_marks {
+#xmgafkcemi .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 75%;
   vertical-align: 0.4em;
 }
 
-#kiibliocot .gt_asterisk {
+#xmgafkcemi .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#kiibliocot .gt_slash_mark {
+#xmgafkcemi .gt_slash_mark {
   font-size: 0.7em;
   line-height: 0.7em;
   vertical-align: 0.15em;
 }
 
-#kiibliocot .gt_fraction_numerator {
+#xmgafkcemi .gt_fraction_numerator {
   font-size: 0.6em;
   line-height: 0.6em;
   vertical-align: 0.45em;
 }
 
-#kiibliocot .gt_fraction_denominator {
+#xmgafkcemi .gt_fraction_denominator {
   font-size: 0.6em;
   line-height: 0.6em;
   vertical-align: -0.05em;
@@ -3616,8 +3616,8 @@ ggstatsplot::ggcorrmat(data = wine, type = &quot;np&quot;, output = &quot;datafr
     select(&quot;parameter1&quot;, &quot;parameter2&quot;, &quot;estimate&quot;, &quot;conf.low&quot;, &quot;conf.high&quot;, &quot;p.value&quot;) %&gt;%
   mutate_if(is.numeric, ~round(.,2)) %&gt;% 
   DT::datatable()</code></pre>
-<div id="htmlwidget-f6121923695819ebe2ba" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-f6121923695819ebe2ba">{"x":{"filter":"none","vertical":false,"data":[["1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21","22","23","24","25","26","27","28","29","30","31","32","33","34","35","36","37","38","39","40","41","42","43","44","45","46","47","48","49","50","51","52","53","54","55","56","57","58","59","60","61","62","63","64","65","66"],["fixed_acidity","fixed_acidity","fixed_acidity","fixed_acidity","fixed_acidity","fixed_acidity","fixed_acidity","fixed_acidity","fixed_acidity","fixed_acidity","fixed_acidity","volatile_acidity","volatile_acidity","volatile_acidity","volatile_acidity","volatile_acidity","volatile_acidity","volatile_acidity","volatile_acidity","volatile_acidity","volatile_acidity","citric_acid","citric_acid","citric_acid","citric_acid","citric_acid","citric_acid","citric_acid","citric_acid","citric_acid","residual_sugar","residual_sugar","residual_sugar","residual_sugar","residual_sugar","residual_sugar","residual_sugar","residual_sugar","chlorides","chlorides","chlorides","chlorides","chlorides","chlorides","chlorides","free_sulfur_dioxide","free_sulfur_dioxide","free_sulfur_dioxide","free_sulfur_dioxide","free_sulfur_dioxide","free_sulfur_dioxide","total_sulfur_dioxide","total_sulfur_dioxide","total_sulfur_dioxide","total_sulfur_dioxide","total_sulfur_dioxide","density","density","density","density","ph","ph","ph","sulphates","sulphates","alcohol"],["volatile_acidity","citric_acid","residual_sugar","chlorides","free_sulfur_dioxide","total_sulfur_dioxide","density","ph","sulphates","alcohol","quality","citric_acid","residual_sugar","chlorides","free_sulfur_dioxide","total_sulfur_dioxide","density","ph","sulphates","alcohol","quality","residual_sugar","chlorides","free_sulfur_dioxide","total_sulfur_dioxide","density","ph","sulphates","alcohol","quality","chlorides","free_sulfur_dioxide","total_sulfur_dioxide","density","ph","sulphates","alcohol","quality","free_sulfur_dioxide","total_sulfur_dioxide","density","ph","sulphates","alcohol","quality","total_sulfur_dioxide","density","ph","sulphates","alcohol","quality","density","ph","sulphates","alcohol","quality","ph","sulphates","alcohol","quality","sulphates","alcohol","quality","alcohol","quality","quality"],[-0.28,0.66,0.22,0.25,-0.18,-0.09,0.62,-0.71,0.21,-0.07,0.11,-0.61,0.03,0.16,0.02,0.09,0.03,0.23,-0.33,-0.22,-0.38,0.18,0.11,-0.08,0.01,0.35,-0.55,0.33,0.1,0.21,0.21,0.07,0.15,0.42,-0.09,0.04,0.12,0.03,0,0.13,0.41,-0.23,0.02,-0.28,-0.19,0.79,-0.04,0.12,0.05,-0.08,-0.06,0.13,-0.01,-0,-0.26,-0.2,-0.31,0.16,-0.46,-0.18,-0.08,0.18,-0.04,0.21,0.38,0.48],[-0.32,0.63,0.17,0.2,-0.22,-0.14,0.59,-0.73,0.16,-0.12,0.06,-0.64,-0.02,0.11,-0.03,0.04,-0.03,0.19,-0.37,-0.27,-0.42,0.13,0.06,-0.13,-0.04,0.31,-0.58,0.29,0.05,0.16,0.16,0.02,0.1,0.38,-0.14,-0.01,0.07,-0.02,-0.05,0.08,0.37,-0.28,-0.03,-0.33,-0.24,0.77,-0.09,0.07,-0,-0.13,-0.11,0.08,-0.06,-0.05,-0.3,-0.24,-0.36,0.11,-0.5,-0.23,-0.13,0.13,-0.09,0.16,0.33,0.44],[-0.23,0.69,0.27,0.3,-0.13,-0.04,0.65,-0.68,0.26,-0.02,0.16,-0.58,0.08,0.21,0.07,0.14,0.08,0.28,-0.28,-0.18,-0.34,0.22,0.16,-0.03,0.06,0.4,-0.51,0.38,0.15,0.26,0.26,0.12,0.19,0.46,-0.04,0.09,0.17,0.08,0.05,0.18,0.45,-0.19,0.07,-0.24,-0.14,0.81,0.01,0.17,0.1,-0.03,-0.01,0.18,0.04,0.05,-0.21,-0.15,-0.27,0.21,-0.42,-0.13,-0.03,0.23,0.01,0.26,0.42,0.52],[0,0,0,0,0,0.01,0,0,0,0.12,0,0,1,0,1,0,1,0,0,0,0,0,0,0.04,1,0,0,0,0,0,0,0.05,0,0,0.01,1,0,1,1,0,0,0,1,0,0,0,1,0,0.87,0.02,0.32,0,1,1,0,0,0,0,0,0,0.02,0,0.97,0,0,0]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>parameter1<\/th>\n      <th>parameter2<\/th>\n      <th>estimate<\/th>\n      <th>conf.low<\/th>\n      <th>conf.high<\/th>\n      <th>p.value<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"columnDefs":[{"className":"dt-right","targets":[3,4,5,6]},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-46804116a6b051107b8a" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-46804116a6b051107b8a">{"x":{"filter":"none","vertical":false,"data":[["1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21","22","23","24","25","26","27","28","29","30","31","32","33","34","35","36","37","38","39","40","41","42","43","44","45","46","47","48","49","50","51","52","53","54","55","56","57","58","59","60","61","62","63","64","65","66"],["fixed_acidity","fixed_acidity","fixed_acidity","fixed_acidity","fixed_acidity","fixed_acidity","fixed_acidity","fixed_acidity","fixed_acidity","fixed_acidity","fixed_acidity","volatile_acidity","volatile_acidity","volatile_acidity","volatile_acidity","volatile_acidity","volatile_acidity","volatile_acidity","volatile_acidity","volatile_acidity","volatile_acidity","citric_acid","citric_acid","citric_acid","citric_acid","citric_acid","citric_acid","citric_acid","citric_acid","citric_acid","residual_sugar","residual_sugar","residual_sugar","residual_sugar","residual_sugar","residual_sugar","residual_sugar","residual_sugar","chlorides","chlorides","chlorides","chlorides","chlorides","chlorides","chlorides","free_sulfur_dioxide","free_sulfur_dioxide","free_sulfur_dioxide","free_sulfur_dioxide","free_sulfur_dioxide","free_sulfur_dioxide","total_sulfur_dioxide","total_sulfur_dioxide","total_sulfur_dioxide","total_sulfur_dioxide","total_sulfur_dioxide","density","density","density","density","ph","ph","ph","sulphates","sulphates","alcohol"],["volatile_acidity","citric_acid","residual_sugar","chlorides","free_sulfur_dioxide","total_sulfur_dioxide","density","ph","sulphates","alcohol","quality","citric_acid","residual_sugar","chlorides","free_sulfur_dioxide","total_sulfur_dioxide","density","ph","sulphates","alcohol","quality","residual_sugar","chlorides","free_sulfur_dioxide","total_sulfur_dioxide","density","ph","sulphates","alcohol","quality","chlorides","free_sulfur_dioxide","total_sulfur_dioxide","density","ph","sulphates","alcohol","quality","free_sulfur_dioxide","total_sulfur_dioxide","density","ph","sulphates","alcohol","quality","total_sulfur_dioxide","density","ph","sulphates","alcohol","quality","density","ph","sulphates","alcohol","quality","ph","sulphates","alcohol","quality","sulphates","alcohol","quality","alcohol","quality","quality"],[-0.28,0.66,0.22,0.25,-0.18,-0.09,0.62,-0.71,0.21,-0.07,0.11,-0.61,0.03,0.16,0.02,0.09,0.03,0.23,-0.33,-0.22,-0.38,0.18,0.11,-0.08,0.01,0.35,-0.55,0.33,0.1,0.21,0.21,0.07,0.15,0.42,-0.09,0.04,0.12,0.03,0,0.13,0.41,-0.23,0.02,-0.28,-0.19,0.79,-0.04,0.12,0.05,-0.08,-0.06,0.13,-0.01,-0,-0.26,-0.2,-0.31,0.16,-0.46,-0.18,-0.08,0.18,-0.04,0.21,0.38,0.48],[-0.32,0.63,0.17,0.2,-0.22,-0.14,0.59,-0.73,0.16,-0.12,0.06,-0.64,-0.02,0.11,-0.03,0.04,-0.03,0.19,-0.37,-0.27,-0.42,0.13,0.06,-0.13,-0.04,0.31,-0.58,0.29,0.05,0.16,0.16,0.02,0.1,0.38,-0.14,-0.01,0.07,-0.02,-0.05,0.08,0.37,-0.28,-0.03,-0.33,-0.24,0.77,-0.09,0.07,-0,-0.13,-0.11,0.08,-0.06,-0.05,-0.3,-0.24,-0.36,0.11,-0.5,-0.23,-0.13,0.13,-0.09,0.16,0.33,0.44],[-0.23,0.69,0.27,0.3,-0.13,-0.04,0.65,-0.68,0.26,-0.02,0.16,-0.58,0.08,0.21,0.07,0.14,0.08,0.28,-0.28,-0.18,-0.34,0.22,0.16,-0.03,0.06,0.4,-0.51,0.38,0.15,0.26,0.26,0.12,0.19,0.46,-0.04,0.09,0.17,0.08,0.05,0.18,0.45,-0.19,0.07,-0.24,-0.14,0.81,0.01,0.17,0.1,-0.03,-0.01,0.18,0.04,0.05,-0.21,-0.15,-0.27,0.21,-0.42,-0.13,-0.03,0.23,0.01,0.26,0.42,0.52],[0,0,0,0,0,0.01,0,0,0,0.12,0,0,1,0,1,0,1,0,0,0,0,0,0,0.04,1,0,0,0,0,0,0,0.05,0,0,0.01,1,0,1,1,0,0,0,1,0,0,0,1,0,0.87,0.02,0.32,0,1,1,0,0,0,0,0,0,0.02,0,0.97,0,0,0]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>parameter1<\/th>\n      <th>parameter2<\/th>\n      <th>estimate<\/th>\n      <th>conf.low<\/th>\n      <th>conf.high<\/th>\n      <th>p.value<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"columnDefs":[{"className":"dt-right","targets":[3,4,5,6]},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
 <p>Since we can’t assume normality I used the non-parametric Spearman
 correlation coefficient. The given estimates are reported with 95%
 confidence intervals. If you click on the “estimate” in the interactive
